<resources>
    <string name="app_name">ImageSearchApplication</string>
    <string name="type_here_for_image_search">Search Images</string>
    <string name="search">Search</string>
    <string name="title_activity_image_detail_screen">ImageDetailScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="image">image</string>
    <string name="tag">Tag :</string>
    <string name="resolution">Resolution :</string>
    <string name="upload_by">Upload by :</string>
    <string name="no_internet">No Internet</string>
</resources>